--- a/res/layout/jpake.xml
+++ b/res/layout/jpake.xml
@@ -4,13 +4,11 @@
   android:orientation="vertical"
   android:layout_width="match_parent"
   android:layout_height="match_parent">
-    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/textView1" android:text="1.Enter the phone number you want to establish connection with:"></TextView>
-    <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/editText1"></EditText>
-    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/textView2" android:text="2.Enter the shared secret:"></TextView>
-    <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/editText2" android:inputType="textPassword">
-        <requestFocus></requestFocus>
-    </EditText>
-    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/textView3" android:text="3.Hit the button below to establish secure connection"></TextView>
-    <Button android:id="@+id/button1" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:layout_width="318dp" android:text="Establish Secure Connection"></Button>
+    <TextView android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Authentication Progress"></TextView>
+    <ProgressBar android:layout_height="wrap_content" android:id="@+id/progressBar1" android:layout_width="match_parent" style="?android:attr/progressBarStyleHorizontal"></ProgressBar>
+    <TextView android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Step 1"></TextView>
+    <Button android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/button1" android:text="Send Packet 1"></Button>
+    <TextView android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Step2"></TextView>
+    <Button android:layout_height="wrap_content" android:id="@+id/button2" android:layout_width="match_parent" android:text="Send Packet 2" android:clickable="false"></Button>
     
 </LinearLayout>
