Choice of Alice or Bob
Finished implementing Check button to choose to launch Alice Activity or
Bob Activity.

--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -12,8 +12,10 @@
     </EditText>
     <TextView android:layout_height="wrap_content" android:id="@+id/textView4" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:text="3. Choose a role to play with:"></TextView>
     <LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout1" android:layout_width="wrap_content" android:layout_gravity="fill_horizontal">
-        <RadioButton android:layout_height="wrap_content" android:id="@+id/radioButton1" android:layout_width="wrap_content" android:text="Alice"></RadioButton>
-        <RadioButton android:layout_height="wrap_content" android:id="@+id/radioButton2" android:layout_width="wrap_content" android:text="Bob"></RadioButton>
+        <RadioGroup android:layout_height="wrap_content" android:layout_width="wrap_content" android:orientation="horizontal" android:id="@+id/radioGroup1">
+            <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/radio0" android:checked="true" android:text="Alice"></RadioButton>
+            <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/radio1" android:text="Bob"></RadioButton>
+        </RadioGroup>
     </LinearLayout>
     <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/textView3" android:text="4.Hit the button below to establish secure connection"></TextView>
     <Button android:id="@+id/button1" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:layout_width="318dp" android:text="Establish Secure Connection"></Button>
